Colaboratory를 통해 생성됨

--- a/20221018_대학원수업.ipynb
+++ b/20221018_대학원수업.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFHB7m/d5Mr08ir/AfWf2Q",
+      "authorship_tag": "ABX9TyN20BDxk5aXG+csiMjBVmJ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,9 @@
         "\n",
         "\n",
         "\n",
-        "# 과제 = 베스트 솔루션(가장 최적의 그룹핑)을 내기 위한 근거를 제시하시오. +알파로 코드 만들어보기\n",
+        "# 과제 = 베스트 솔루션(가장 최적의 그룹핑)을 내기 위한 근거를 제시하시오. +알파로 코드 만들어보기 - 직접 하나하나 다 구하려면 너무 방대한 시간이 걸릴것. 아이디어만 내볼것. 휴리스틱을 사용하면 최적해를 구해볼 수 있다.\n",
+        "\n",
+        "# gmoon@dnue.ac.kr 으로 보내리\n",
         "\n"
       ],
       "metadata": {
@@ -46,63 +48,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYFfhtcsYwKy",
-        "outputId": "576ff1ce-5593-4846-b367-47227d526fa3"
+        "outputId": "ea32ad54-bc3c-450c-e486-abd9040e60b3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "r1= 11  r2= 9\n",
+            "r1= 7  r2= 14\n",
             "\n",
-            "P=( 135 , 40 )\n",
-            "Q=( 133 , 42 )\n",
-            "iter =  0 :(Dh,Dw) = (122, 38) : distP =  13.15 ,distQ = 11.7\n",
-            "iter =  1 :(Dh,Dw) = (125, 41) : distP =  10.05 ,distQ = 8.06\n",
-            "iter =  2 :(Dh,Dw) = (125, 40) : distP =  10.0 ,distQ = 8.25\n",
-            "iter =  3 :(Dh,Dw) = (130, 42) : distP =  5.39 ,distQ = 3.0\n",
-            "iter =  4 :(Dh,Dw) = (131, 40) : distP =  4.0 ,distQ = 2.83\n",
-            "iter =  5 :(Dh,Dw) = (132, 41) : distP =  3.16 ,distQ = 1.41\n",
-            "iter =  6 :(Dh,Dw) = (132, 45) : distP =  5.83 ,distQ = 3.16\n",
-            "iter =  7 :(Dh,Dw) = (133, 39) : distP =  2.24 ,distQ = 3.0\n",
-            "iter =  8 :(Dh,Dw) = (133, 44) : distP =  4.47 ,distQ = 2.0\n",
-            "iter =  9 :(Dh,Dw) = (133, 42) : distP =  2.83 ,distQ = 0.0\n",
-            "iter =  10 :(Dh,Dw) = (134, 40) : distP =  1.0 ,distQ = 2.24\n",
-            "iter =  11 :(Dh,Dw) = (135, 40) : distP =  0.0 ,distQ = 2.83\n",
-            "iter =  12 :(Dh,Dw) = (136, 42) : distP =  2.24 ,distQ = 3.0\n",
-            "iter =  13 :(Dh,Dw) = (137, 41) : distP =  2.24 ,distQ = 4.12\n",
-            "iter =  14 :(Dh,Dw) = (137, 44) : distP =  4.47 ,distQ = 4.47\n",
-            "iter =  15 :(Dh,Dw) = (139, 43) : distP =  5.0 ,distQ = 6.08\n",
-            "iter =  16 :(Dh,Dw) = (140, 45) : distP =  7.07 ,distQ = 7.62\n",
-            "group_P =  [7, 10, 11, 12, 13, 15, 16] group_Q =  [0, 1, 2, 3, 4, 5, 6, 8, 9, 14]\n",
-            "avgPh =  136.3 avgPw = 41.4\n",
-            "avgQh =  130.0 avgQw = 41.7\n",
+            "P=( 133 , 39 )\n",
+            "Q=( 137 , 44 )\n",
+            "iter =  0 :(Dh,Dw) = (122, 38) : distP =  11.05 ,distQ = 16.16\n",
+            "iter =  1 :(Dh,Dw) = (125, 41) : distP =  8.25 ,distQ = 12.37\n",
+            "iter =  2 :(Dh,Dw) = (125, 40) : distP =  8.06 ,distQ = 12.65\n",
+            "iter =  3 :(Dh,Dw) = (130, 42) : distP =  4.24 ,distQ = 7.28\n",
+            "iter =  4 :(Dh,Dw) = (131, 40) : distP =  2.24 ,distQ = 7.21\n",
+            "iter =  5 :(Dh,Dw) = (132, 41) : distP =  2.24 ,distQ = 5.83\n",
+            "iter =  6 :(Dh,Dw) = (132, 45) : distP =  6.08 ,distQ = 5.1\n",
+            "iter =  7 :(Dh,Dw) = (133, 39) : distP =  0.0 ,distQ = 6.4\n",
+            "iter =  8 :(Dh,Dw) = (133, 44) : distP =  5.0 ,distQ = 4.0\n",
+            "iter =  9 :(Dh,Dw) = (133, 42) : distP =  3.0 ,distQ = 4.47\n",
+            "iter =  10 :(Dh,Dw) = (134, 40) : distP =  1.41 ,distQ = 5.0\n",
+            "iter =  11 :(Dh,Dw) = (135, 40) : distP =  2.24 ,distQ = 4.47\n",
+            "iter =  12 :(Dh,Dw) = (136, 42) : distP =  4.24 ,distQ = 2.24\n",
+            "iter =  13 :(Dh,Dw) = (137, 41) : distP =  4.47 ,distQ = 3.0\n",
+            "iter =  14 :(Dh,Dw) = (137, 44) : distP =  6.4 ,distQ = 0.0\n",
+            "iter =  15 :(Dh,Dw) = (139, 43) : distP =  7.21 ,distQ = 2.24\n",
+            "iter =  16 :(Dh,Dw) = (140, 45) : distP =  9.22 ,distQ = 3.16\n",
+            "group_P =  [0, 1, 2, 3, 4, 5, 7, 9, 10, 11] group_Q =  [6, 8, 12, 13, 14, 15, 16]\n",
+            "avgPh =  130.0 avgPw = 40.3\n",
+            "avgQh =  136.3 avgQw = 43.4\n",
             "iter: 1 ------------------------------------\n",
-            "avgPh =  136.9 avgPw = 42.1\n",
-            "avgQh =  129.6 avgQw = 41.2\n",
+            "avgPh =  129.4 avgPw = 40.3\n",
+            "avgQh =  136.1 avgQw = 43.0\n",
             "iter: 2 ------------------------------------\n",
-            "avgPh =  136.4 avgPw = 42.4\n",
-            "avgQh =  129.2 avgQw = 40.9\n",
+            "avgPh =  128.3 avgPw = 40.1\n",
+            "avgQh =  135.6 avgQw = 42.6\n",
             "iter: 3 ------------------------------------\n",
-            "avgPh =  136.0 avgPw = 42.3\n",
-            "avgQh =  128.8 avgQw = 40.8\n",
+            "avgPh =  127.5 avgPw = 40.3\n",
+            "avgQh =  135.4 avgQw = 42.3\n",
             "iter: 4 ------------------------------------\n",
-            "avgPh =  135.4 avgPw = 42.3\n",
-            "avgQh =  127.5 avgQw = 40.3\n",
+            "avgPh =  126.6 avgPw = 40.2\n",
+            "avgQh =  135.1 avgQw = 42.2\n",
             "iter: 5 ------------------------------------\n",
-            "avgPh =  135.1 avgPw = 42.2\n",
-            "avgQh =  126.6 avgQw = 40.2\n",
-            "iter: 6 ------------------------------------\n",
             "#######################################\n",
-            "group_P =  [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16] group_Q =  [0, 1, 2, 3, 4]\n",
-            "avgPh =  135.1 avgPw = 42.2\n",
-            "avgQh =  126.6 avgQw = 40.2\n",
+            "group_P =  [0, 1, 2, 3, 4] group_Q =  [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n",
+            "avgPh =  126.6 avgPw = 40.2\n",
+            "avgQh =  135.1 avgQw = 42.2\n",
             "###########  END OF PROGRAM   ############\n"
           ]
         }
@@ -270,6 +269,7 @@
         "  Oldgroup_P = group_P\n",
         " \n",
         " \n",
+        "\n",
         "\n",
         "\n",
         "\n",
