Colaboratory를 통해 생성됨

--- a/20221025_대학원수업_KMC최종.ipynb
+++ b/20221025_대학원수업_KMC최종.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPxPITco/sKPJNUgUf/rz3",
+      "authorship_tag": "ABX9TyPS48cGv1TA1ZMpjF/+53kT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "# 두 그룹을 최적의 그룹이 되도록 만들기\n",
         "## 1. 각 점에서 P 점과 Q점까지 거리의 합 = disTot가 가장 최소일때가 가장 최적의 P,Q그룹일 것이다.\n",
         "## 2. 문제 = 그럼 대체 몇번 실행시켜야 믿을만할 수 있을까? 무한정 반복해야하나?\n",
-        "##"
+        "##과제 = KMC질문, KCM내용요약"
       ],
       "metadata": {
         "id": "fe3mXo5wdnZo"
