--- a/20221025대학원수업_Q_Learning.ipynb
+++ b/20221025대학원수업_Q_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmQk9sT0Kic0G401Y7IMgo",
+      "authorship_tag": "ABX9TyMZDCKzw7RSEEZeiHyrxh27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mb6po21bivcF",
-        "outputId": "d7644ed6-d2b7-4970-8afb-a3b75ad50d23"
+        "outputId": "3c45ae20-e066-4b07-8a0f-48d2a845afa4"
       },
       "outputs": [
         {
@@ -56,6 +56,7 @@
           "text": [
             "[gmoon:QL-01-Data.py:210222:#1]  >> \n",
             "\n",
+            ";list= [0, -1, -1, 0, -1, 100]\n",
             "RT[]=\n",
             "[ \n",
             "[-1, -1, -1, -1, 0, -1]\n",
@@ -74,6 +75,8 @@
             "[0, 0, 0, 0, 0, 0]\n",
             "[0, 0, 0, 0, 0, 0]\n",
             "]\n",
+            "\n",
+            "state = 4 next_nodes = [0, 3, 5]\n",
             "\n",
             "###########  END OF PROGRAM   ############\n"
           ]
@@ -113,6 +116,26 @@
         "  print(\"]\")\n",
         "#def.show_table()\n",
         "\n",
+        "######################    FIND_NEXT_NODES() ###############\n",
+        "  # (e.g) RT[0] = [-1,-1,-1,-1,0,-1]\n",
+        "  # result; (RT,0) -> next_nodes = [4]\n",
+        "  #(e.g) RT[4] = [0,-1,-1,0,-1,100]\n",
+        "  # result; (RT,4) -> next_nodes = [0,3,5]\n",
+        "\n",
+        "def FIND_NEXT_NODES(RT,row):\n",
+        "  list = RT[row]        # [0,-1,-1,0,-1,100]\n",
+        "  print(\" ; list=\",list)\n",
+        "  input()\n",
+        "  col = 0\n",
+        "  next_nodes = []\n",
+        "  for L in list:\n",
+        "    if (L != -1):\n",
+        "      next_nodes.append(col)\n",
+        "    col += 1\n",
+        "\n",
+        "  return next_nodes\n",
+        "#def.find_next_nodes\n",
+        "\n",
         "#####################  MAIN  ######################\n",
         "\n",
         "print(\"RT[]=\")\n",
@@ -121,6 +144,20 @@
         "print(\"QT[]=\")\n",
         "SHOW_Table(QT)\n",
         "input()\n",
+        "\n",
+        "state = 4            #current state\n",
+        "next_nodes = FIND_NEXT_NODES(RT,state)\n",
+        "\n",
+        "  # (e.g) RT[0] = [-1,-1,-1,-1,0,-1]\n",
+        "  # result; (RT,0) -> next_nodes = [4]\n",
+        "  #(e.g) RT[4] = [0,-1,-1,0,-1,100]\n",
+        "  # result; (RT,4) -> next_nodes = [0,3,5]\n",
+        "print(\"state =\",state,\"next_nodes =\",next_nodes)\n",
+        "input()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "print(\"###########  END OF PROGRAM   ############\")\n",
         "#//"
