Colaboratory를 통해 생성됨

--- a/20221025대학원수업_Q_Learning.ipynb
+++ b/20221025대학원수업_Q_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZDCKzw7RSEEZeiHyrxh27",
+      "authorship_tag": "ABX9TyOLpzDfldtb9enhojXqhaev",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,22 +41,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mb6po21bivcF",
-        "outputId": "3c45ae20-e066-4b07-8a0f-48d2a845afa4"
+        "outputId": "cf703e81-ae8c-4916-a13b-38ca4f103519"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[gmoon:QL-01-Data.py:210222:#1]  >> \n",
+            "[gmoon:QL-03-genPaths.py:210222:#1]  >> \n",
             "\n",
-            ";list= [0, -1, -1, 0, -1, 100]\n",
             "RT[]=\n",
             "[ \n",
             "[-1, -1, -1, -1, 0, -1]\n",
@@ -76,7 +75,11 @@
             "[0, 0, 0, 0, 0, 0]\n",
             "]\n",
             "\n",
-            "state = 4 next_nodes = [0, 3, 5]\n",
+            " ; list= [-1, -1, -1, -1, 0, -1]\n",
+            "\n",
+            "state = 0 next_nodes = [4]\n",
+            "\n",
+            "gen_Paths(); = ,pathNow =  [0, 4]  next_nodes =  [0, 3, 5] pathList = [[0, 4, 3], [0, 4, 5]]\n",
             "\n",
             "###########  END OF PROGRAM   ############\n"
           ]
@@ -86,7 +89,7 @@
         "# [gmoon:QL-01-Data.py:210222:#1] \n",
         "#\n",
         "\n",
-        "print(\"[gmoon:QL-01-Data.py:210222:#1]  >> \")\n",
+        "print(\"[gmoon:QL-03-genPaths.py:210222:#1]  >> \")\n",
         "input()\n",
         "\n",
         "            # 0    1    2    3    4    5\n",
@@ -118,7 +121,7 @@
         "\n",
         "######################    FIND_NEXT_NODES() ###############\n",
         "  # (e.g) RT[0] = [-1,-1,-1,-1,0,-1]\n",
-        "  # result; (RT,0) -> next_nodes = [4]\n",
+        "  # result; (RT,0) -> next_nodes = [4]    # 함수를 만들 때 이렇게 이그잼플을 좀 붙여주는게 나중에 함수와 코드를 이해하기 좋다.\n",
         "  #(e.g) RT[4] = [0,-1,-1,0,-1,100]\n",
         "  # result; (RT,4) -> next_nodes = [0,3,5]\n",
         "\n",
@@ -136,6 +139,25 @@
         "  return next_nodes\n",
         "#def.find_next_nodes\n",
         "\n",
+        "####################### GEN_PATHS()  #####################\n",
+        "\n",
+        " # (e.g) pathNow = [0,4], next_nodes=[0,3,5]\n",
+        " # result; -> pathList = [ [0,4,3],[0,4,5] ]\n",
+        "\n",
+        "def GEN_PATHS(pathNow,next_nodes):\n",
+        "  pathList = []\n",
+        "  for N in next_nodes:\n",
+        "    baseList = pathNow[:]          # pathNow 리스트를 내용복사하기;  e.g.. [0,4]\n",
+        "    if N not in pathNow:           # next_nodes = [0,3,5]  -> N = 0,3,5\n",
+        "      baseList.append(N)           # baseList = [0,4,3] , [0,4,5]\n",
+        "      pathList.append(baseList)    #pathList = [[0,4,3] , [0,4,5]]\n",
+        "  \n",
+        "  return pathList     \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "#####################  MAIN  ######################\n",
         "\n",
         "print(\"RT[]=\")\n",
@@ -145,19 +167,20 @@
         "SHOW_Table(QT)\n",
         "input()\n",
         "\n",
-        "state = 4            #current state\n",
+        "state = 0            #current state\n",
         "next_nodes = FIND_NEXT_NODES(RT,state)\n",
-        "\n",
-        "  # (e.g) RT[0] = [-1,-1,-1,-1,0,-1]\n",
-        "  # result; (RT,0) -> next_nodes = [4]\n",
-        "  #(e.g) RT[4] = [0,-1,-1,0,-1,100]\n",
-        "  # result; (RT,4) -> next_nodes = [0,3,5]\n",
         "print(\"state =\",state,\"next_nodes =\",next_nodes)\n",
         "input()\n",
         "\n",
+        "           ############ gen Paths    ##########\n",
+        " # (e.g) pathNow = [0,4], next_nodes=[0,3,5]\n",
+        " # result; -> pathList = [ [0,4,3],[0,4,5] ]\n",
+        "pathNow = [0,4]\n",
+        "next_nodes = [0,3,5]\n",
+        "pathList = GEN_PATHS(pathNow,next_nodes)\n",
         "\n",
-        "\n",
-        "\n",
+        "print(\"gen_Paths(); = ,pathNow = \",pathNow,\" next_nodes = \",next_nodes,\"pathList =\",pathList)\n",
+        "input()\n",
         "\n",
         "print(\"###########  END OF PROGRAM   ############\")\n",
         "#//"
