--- a/20221025대학원수업_Q_Learning.ipynb
+++ b/20221025대학원수업_Q_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLpzDfldtb9enhojXqhaev",
+      "authorship_tag": "ABX9TyM9BKGYDCLciQwaumBcyHAv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,7 +148,7 @@
         "  pathList = []\n",
         "  for N in next_nodes:\n",
         "    baseList = pathNow[:]          # pathNow 리스트를 내용복사하기;  e.g.. [0,4]\n",
-        "    if N not in pathNow:           # next_nodes = [0,3,5]  -> N = 0,3,5\n",
+        "    if N not in pathNow:           # pathNow = [0,4]  -> N = 3,5\n",
         "      baseList.append(N)           # baseList = [0,4,3] , [0,4,5]\n",
         "      pathList.append(baseList)    #pathList = [[0,4,3] , [0,4,5]]\n",
         "  \n",
