Colaboratory를 통해 생성됨

--- a/20221108대학원수업_Q_Learning_2.ipynb
+++ b/20221108대학원수업_Q_Learning_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZTlPF6otk81SEQpQktf0v",
+      "authorship_tag": "ABX9TyOE+b/QSBCSNKjtfEiefQ4o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/yeop94/2022--AI-/blob/main/20221108%EB%8C%80%ED%95%99%EC%9B%90%EC%88%98%EC%97%85_Q_Learning_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#과제 = 최종QT테이블을 보면 0열에 대해서는 어디로 가야할지 알수가 없다 왜그런지 이유 설명 - 정답 : 0열에 대한 함수가 가장 처음에 QT테이블에 아무것도 없을 때 이미 지나갔기 때문에 reward를 제대로 입력하지 못했다.\n",
+        "# 과제2 = 그 문제를 해결할 수 있도록 아이디어 또는 코드 짜보기 - 교수님 메일로 제출 - 정답 : 해결방법 = state를 0부터 5까지 한 뒤에 다시 한번만 처음부터 반복하면 될 것 같다."
+      ],
+      "metadata": {
+        "id": "4b9i37VJCae8"
+      }
     },
     {
       "cell_type": "markdown",
@@ -253,9 +263,7 @@
         "# 위의것들은 예시를 확인해보면서 함수 만들기!\n",
         "# 이제 진짜 구해보려면 반복을 해야한다!\n",
         "# 반복을 어떻게 해야할까?\n",
-        "\n",
-        "# 과제 = 최종QT테이블을 보면 0열에 대해서는 어디로 가야할지 알수가 없다 왜그런지 이유 설명\n",
-        "# 과제2 = 그 문제를 해결할 수 있도록 아이디어 또는 코드 짜보기 "
+        "\n"
       ],
       "metadata": {
         "id": "gxMIboFspHbk"
