Colaboratory를 통해 생성됨

--- a/20221115_대학원수업_QL.ipynb
+++ b/20221115_대학원수업_QL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPm13hQsUBmDx74ixfzeNh6",
+      "authorship_tag": "ABX9TyOigeCO0qKz9ugAcnrXlUHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -352,11 +352,41 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "## 교수님이 만든 코드~~"
+        "## 교수님이 만든 코드~~\n",
+        "### 과제 : 데이터가 24개밖에 안되는데 너무 오래걸린다. 이걸 조금 휴리스틱하게 바꿔서 시간을 줄일 수 있는 아이디어 내보자\n",
+        "### 결국 가장 오래걸리는 부분은 FIND_NEXT_NODES 부분이다!\n",
+        "### FIND_NEXT_NODES 함수에서 모든 col들을 끌어모으지 말고 랜덤하게 하나만 가져오자!\n",
+        "\n",
+        "##### def FIND_NEXT_NODES(RT,row):\n",
+        "#####  list = RT[row]    # [0,-1,-1,0,-1,100]\n",
+        "#####  #print(\" ; list=\",list)\n",
+        "#####  #input()\n",
+        "#####  col = 0\n",
+        "#####  next_nodes = []\n",
+        "#####  for L in list:\n",
+        "#####     if (L != -1):\n",
+        "#####        next_nodes.append(col)\n",
+        "#####     #if\n",
+        "#####     col += 1\n",
+        "#####  #for.L\n",
+        "#####  #return next_nodes\n",
+        "#####  N = len(next_nodes)\n",
+        "#####  r = random.randint(0,N-1)\n",
+        "#####  R = next_nodes[r]\n",
+        "#####  return r"
       ],
       "metadata": {
         "id": "_C7mAvDF0F81"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hvo8qb9-A42B"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
