Colaboratory를 통해 생성됨

--- a/20221122_대학원수업_Perceptron.ipynb
+++ b/20221122_대학원수업_Perceptron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzjk+Sk5AUZGfJVHwpcb1d",
+      "authorship_tag": "ABX9TyNdfNlpc0Vyg6Yhv5xRpQDE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_XQtbQ-mRZ3",
-        "outputId": "363329aa-134b-4c2a-c836-5118c2aedcd4"
+        "outputId": "342c9ff4-ef03-4557-e542-a964efbe0157"
       },
       "outputs": [
         {
@@ -54,7 +54,8 @@
           "text": [
             "[PerceptronClassifier-01-Data.py:210326:#1] (Perceptron Classifier) Read Data >> \n",
             "\n",
-            "test;  A\n",
+            "input weights(Wa,Wb,Wc)(e.g.,0, 1, 0.5) >>0 1 0.5\n",
+            "Weights= Wa= 0.0 Wb= 1.0 Wc= 0.5\n",
             "Data counts= 20\n",
             "###########  END OF PROGRAM   ############\n"
           ]
@@ -64,7 +65,7 @@
         "\n",
         "#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
         "\n",
-        "print(\"[PerceptronClassifier-01-Data.py:210326:#1] (Perceptron Classifier) Read Data >> \")\n",
+        "print(\"[PerceptronClassifier-03-Compute:#1] (Perceptron Classifier) Read Data >> \")\n",
         "input()\n",
         "      # [x1Val, x2Val, Label]\n",
         "Dat = [ [-8,1,'B'],  [-6,-1,'B'], [-5,-3,'B'], [-5,3,'B'], [-3,-2,'B'],\n",
@@ -73,7 +74,17 @@
         "        [8,2,'A'],   [9,4,'A'],   [10,-5,'A'], [12,1,'A'], [13,3,'A']\n",
         "      ]\n",
         "\n",
-        "print(\"test; \",Dat[19][2])    # 'A'\n",
+        "\n",
+        "\n",
+        "Wa,Wb,Wc = input((\"input weights(Wa,Wb,Wc)(e.g.,0, 1, 0.5) >>\"    )).split()\n",
+        "Wa = float(Wa)\n",
+        "Wb = float(Wb)\n",
+        "Wc = float(Wc)\n",
+        " \n",
+        "print(\"Weights >>\",\"Wa=\",Wa,\"Wb=\",Wb,\"Wc=\",Wc)\n",
+        "    # slope -->  x2 = -w1/w3*x1 - w1/w3\n",
+        "\n",
+        "\n",
         "print(\"Data counts=\",len(Dat))\n",
         "print(\"###########  END OF PROGRAM   ############\")\n",
         "\n",
