--- a/20221129_대학원수업_Perceptron2.ipynb
+++ b/20221129_대학원수업_Perceptron2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnyW/BBAt0Z0nfS3kjHUTT",
+      "authorship_tag": "ABX9TyNQR9uvv31Qfy3GhfyE6J57",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_XQtbQ-mRZ3",
-        "outputId": "7165cab0-8186-4066-9b47-6052a1f0792a"
+        "outputId": "5c80f088-0208-481e-9bde-76e5cfcf5a32"
       },
       "outputs": [
         {
@@ -104,6 +104,7 @@
             "Weights >> Wa= -0.2 Wb= 0.6 Wc= 0.9\n",
             "slope = -0.67 ,intercept =  0.22\n",
             "x2 =  -1.11\n",
+            "End.while: nErr 2\n",
             "Now, Classifying...\n",
             "x1 =  -8 ,x2Val =  1 ,x2 =  5.555555555555555\n",
             "group =  B\n",
@@ -150,6 +151,7 @@
             "Weights >> Wa= -0.4 Wb= 1.0 Wc= 0.5\n",
             "slope = -2.0 ,intercept =  0.8\n",
             "x2 =  4.8\n",
+            "End.while: nErr 1\n",
             "Now, Classifying...\n",
             "x1 =  -8 ,x2Val =  1 ,x2 =  16.8\n",
             "group =  B\n",
@@ -197,6 +199,7 @@
             "Weights >> Wa= -0.6000000000000001 Wb= 0.6 Wc= 0.9\n",
             "slope = -0.67 ,intercept =  0.67\n",
             "x2 =  -0.67\n",
+            "End.while: nErr 2\n",
             "Now, Classifying...\n",
             "x1 =  -8 ,x2Val =  1 ,x2 =  6.0\n",
             "group =  B\n",
@@ -333,10 +336,36 @@
         "\n",
         "  x2 = slope*x1Dat + intercept\n",
         "  print(\"x2 = \",round(x2,2))\n",
-        "\n",
-        "\n",
+        "  print(\"End.while: nErr = \",nErr)\n",
+        "  \n",
         "print(\"================== Result ===============\")\n",
         "print(\"slope = \",round(slope,2),\"intercept = \",round(intercept,2))\n",
+        "\n",
+        " # Classifier\n",
+        "while (1):\n",
+        "  print(\"\\n==========  LINEAR CLASSIFIER  ==========\")\n",
+        "  print(\"slope=\",round(slope,2),\" intercept=\",round(intercept,2))\n",
+        "  input()\n",
+        "  print(\"Input x and y  (e.g.) 7 7  >> \")\n",
+        "  x, y = input().split()\n",
+        "  x, y = int(x), int(y)\n",
+        "  print(\"Your Input; x=\",x,\" y=\",y)\n",
+        "  input()\n",
+        "  x2 = slope * x + intercept\n",
+        "  if (y > x2):\n",
+        "    print('Classification Result= Group A')\n",
+        "  else:\n",
+        "    print('Classification Result= Group B')\n",
+        "  #if\n",
+        "  print(\"\\nPress 1 to Continue, 0 to Quit >> \")\n",
+        "  ans = int(input())\n",
+        "  if (ans==0):\n",
+        "     break\n",
+        "  #if.0\n",
+        "#while.1\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "print(\"###########  END OF PROGRAM   ############\")\n",
         "\n",
@@ -344,8 +373,127 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#교수님이 만든 코드~~~~~"
+      ],
+      "metadata": {
+        "id": "9SLRVCzcH-EZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"[PerceptronClassifier-06-ErrCorr-Iter.py:#1] (Perceptron Classifier)  >> \")\n",
+        "input()\n",
+        "      # [x1Val, x2Val, Label]\n",
+        "Dat = [ [-8,1,'B'],  [-6,-1,'B'], [-5,-3,'B'], [-5,3,'B'], [-3,-2,'B'],\n",
+        "        [-2,-1,'B'], [-2,2,'B'],  [0,-3,'B'],  [2,-2,'B'], [3,7,'A'],\n",
+        "        [4,-4,'B'],  [4,9,'A'],   [6,4,'A'],   [6,8,'A'],  [7,-1,'A'],\n",
+        "        [8,2,'A'],   [9,4,'A'],   [10,-5,'A'], [12,1,'A'], [13,3,'A']\n",
+        "      ]\n",
+        "\n",
+        "print(\"Input weights (Wa,Wb,Wc) (e.g., 0 1 0.5) >> \")\n",
+        "#Wa,Wb,Wc = input().split()    # Wa='0', Wb='1', Wc='0.5'\n",
+        "#Wa = float(Wa)\n",
+        "#Wb = float(Wb)\n",
+        "#Wc = float(Wc)\n",
+        "Wa=0.0; Wb=1.0; Wc=0.5\n",
+        "input()\n",
+        "print(\"Weights=\",Wa,Wb,Wc)    # 0, 1, 0.5\n",
+        "   # slope & intercept\n",
+        "slope = -(Wb/Wc)        # -2\n",
+        "intercept = -(Wa/Wc)   # 0\n",
+        "print(\"slope=\",round(slope,1),\" intercept=\",intercept)\n",
+        "input()\n",
+        "\n",
+        "L = 0.2     # Learning rate\n",
+        "\n",
+        "while (1): \n",
+        "  print(\"Now, Classifying ...\")\n",
+        "  nErr = 0   # nbr of errors\n",
+        "  iter = 0    # iter count\n",
+        "\n",
+        "  for D in Dat:\n",
+        "    iter += 1\n",
+        "    x1 = D[0]    #  =x1Val\n",
+        "    x2Val = D[1]\n",
+        "    x2 = slope*x1 + intercept   #e.g., x1=-8 ->  x2=(-2)(-8) = 16  (x2Val=1)\n",
+        "    print(\"x1=\",x1,\" x2Val=\",x2Val,\" x2=\",round(x2,2))\n",
+        "    if (x2Val > x2):\n",
+        "         group = 'A'\n",
+        "    else:\n",
+        "         group = 'B'\n",
+        "    #if\n",
+        "    print(\"group=\",group)\n",
+        "    input()\n",
+        "\n",
+        "    if (group != D[2]):    # error occurs\n",
+        "        print(\"Current data=\",D,\"; Computed group=\",group,\" real group=\",D[2])\n",
+        "        input()\n",
+        "        nErr += 1\n",
+        "        if (nErr==1):    # first error\n",
+        "            firstE = iter - 1\n",
+        "        #if\n",
+        "    #if\n",
+        "\n",
+        "    if (group=='A'):\n",
+        "       dVal = -1\n",
+        "    else:\n",
+        "       dVal = 1\n",
+        "    #if\n",
+        "    print(\"dVal=\",dVal)\n",
+        "  #for.D\n",
+        "\n",
+        "  if (nErr==0):   # no errs\n",
+        "     break\n",
+        "  #if\n",
+        "\n",
+        "  x1Dat = Dat[firstE][0]   # (2,-2) -> 2\n",
+        "  x2Dat = Dat[firstE][1]   # (2,-2) -> -2\n",
+        "  Wa = Wa + L*dVal*1\n",
+        "  Wb = Wb + L*dVal*x1Dat\n",
+        "  Wc = Wc + L*dVal*x2Dat\n",
+        "  slope = -(Wb/Wc)\n",
+        "  intercept = -(Wa/Wc)\n",
+        "  print(\"Wa=\",Wa,\" Wb=\",Wb,\" Wc=\",Wc)\n",
+        "  print(\"slope=\",round(slope,2),\" intercept=\",round(intercept,2))\n",
+        "  input()\n",
+        "\n",
+        "  #x2 = slope * x1Dat + intercept\n",
+        "  #print(\"x2=\",round(x2,2))\n",
+        "  print(\"End.while: nErr=\",nErr)\n",
+        "  input()\n",
+        "\n",
+        "#while.1\n",
+        "\n",
+        "print(\"========  Result  ========\")\n",
+        "print(\"slope=\",round(slope,2),\" intercept=\",round(intercept,2))\n",
+        "\n",
+        "\n",
+        "       # Classifier\n",
+        "while (1):\n",
+        "  print(\"\\n==========  LINEAR CLASSIFIER  ==========\")\n",
+        "  print(\"slope=\",round(slope,2),\" intercept=\",round(intercept,2))\n",
+        "  input()\n",
+        "  print(\"Input x and y  (e.g.) 7 7  >> \")\n",
+        "  x, y = input().split()\n",
+        "  x, y = int(x), int(y)\n",
+        "  print(\"Your Input; x=\",x,\" y=\",y)\n",
+        "  input()\n",
+        "  x2 = slope * x + intercept\n",
+        "  if (y > x2):\n",
+        "    print('Classification Result= Group A')\n",
+        "  else:\n",
+        "    print('Classification Result= Group B')\n",
+        "  #if\n",
+        "  print(\"\\nPress 1 to Continue, 0 to Quit >> \")\n",
+        "  ans = int(input())\n",
+        "  if (ans==0):\n",
+        "     break\n",
+        "  #if.0\n",
+        "#while.1"
+      ],
       "metadata": {
         "id": "WxulUl9stP_2"
       },
