Colaboratory를 통해 생성됨

--- a/20221129_대학원수업_Perceptron2.ipynb
+++ b/20221129_대학원수업_Perceptron2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQR9uvv31Qfy3GhfyE6J57",
+      "authorship_tag": "ABX9TyOuRbfWkD4UU3/ANerpscw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_XQtbQ-mRZ3",
-        "outputId": "5c80f088-0208-481e-9bde-76e5cfcf5a32"
+        "outputId": "95976f73-7b02-4157-d8d2-4891394b725e"
       },
       "outputs": [
         {
@@ -54,196 +54,23 @@
           "text": [
             "[PerceptronClassifier-03-Compute:#1] (Perceptron Classifier) Read Data >> \n",
             "\n",
-            "Weights >> Wa= 0 Wb= 1 Wc= 0.5\n",
-            "slope = -2.0 ,intercept =  -0.0\n",
+            "input weights(Wa,Wb,Wc)(e.g.,0, 1, 0.5) >>1 2 3\n",
+            "Weights >> Wa= 1.0 Wb= 2.0 Wc= 3.0\n",
             "\n",
-            "Now, Classifying...\n",
-            "x1 =  -8 ,x2Val =  1 ,x2 =  16.0\n",
-            "group =  B\n",
-            "x1 =  -6 ,x2Val =  -1 ,x2 =  12.0\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  -3 ,x2 =  10.0\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  3 ,x2 =  10.0\n",
-            "group =  B\n",
-            "x1 =  -3 ,x2Val =  -2 ,x2 =  6.0\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  -1 ,x2 =  4.0\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  2 ,x2 =  4.0\n",
-            "group =  B\n",
-            "x1 =  0 ,x2Val =  -3 ,x2 =  -0.0\n",
-            "group =  B\n",
-            "x1 =  2 ,x2Val =  -2 ,x2 =  -4.0\n",
-            "group =  A\n",
-            "Current Data = [2, -2, 'B'] computed group =  A real group = B\n",
-            "x1 =  3 ,x2Val =  7 ,x2 =  -6.0\n",
-            "group =  A\n",
-            "x1 =  4 ,x2Val =  -4 ,x2 =  -8.0\n",
-            "group =  A\n",
-            "Current Data = [4, -4, 'B'] computed group =  A real group = B\n",
-            "x1 =  4 ,x2Val =  9 ,x2 =  -8.0\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  4 ,x2 =  -12.0\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  8 ,x2 =  -12.0\n",
-            "group =  A\n",
-            "x1 =  7 ,x2Val =  -1 ,x2 =  -14.0\n",
-            "group =  A\n",
-            "x1 =  8 ,x2Val =  2 ,x2 =  -16.0\n",
-            "group =  A\n",
-            "x1 =  9 ,x2Val =  4 ,x2 =  -18.0\n",
-            "group =  A\n",
-            "x1 =  10 ,x2Val =  -5 ,x2 =  -20.0\n",
-            "group =  A\n",
-            "x1 =  12 ,x2Val =  1 ,x2 =  -24.0\n",
-            "group =  A\n",
-            "x1 =  13 ,x2Val =  3 ,x2 =  -26.0\n",
-            "group =  A\n",
-            "dVal =  -1\n",
-            "Weights >> Wa= -0.2 Wb= 0.6 Wc= 0.9\n",
-            "slope = -0.67 ,intercept =  0.22\n",
-            "x2 =  -1.11\n",
-            "End.while: nErr 2\n",
-            "Now, Classifying...\n",
-            "x1 =  -8 ,x2Val =  1 ,x2 =  5.555555555555555\n",
-            "group =  B\n",
-            "x1 =  -6 ,x2Val =  -1 ,x2 =  4.222222222222222\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  -3 ,x2 =  3.5555555555555554\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  3 ,x2 =  3.5555555555555554\n",
-            "group =  B\n",
-            "x1 =  -3 ,x2Val =  -2 ,x2 =  2.2222222222222223\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  -1 ,x2 =  1.5555555555555556\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  2 ,x2 =  1.5555555555555556\n",
-            "group =  A\n",
-            "Current Data = [-2, 2, 'B'] computed group =  A real group = B\n",
-            "x1 =  0 ,x2Val =  -3 ,x2 =  0.22222222222222224\n",
-            "group =  B\n",
-            "x1 =  2 ,x2Val =  -2 ,x2 =  -1.111111111111111\n",
-            "group =  B\n",
-            "x1 =  3 ,x2Val =  7 ,x2 =  -1.7777777777777777\n",
-            "group =  A\n",
-            "x1 =  4 ,x2Val =  -4 ,x2 =  -2.444444444444444\n",
-            "group =  B\n",
-            "x1 =  4 ,x2Val =  9 ,x2 =  -2.444444444444444\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  4 ,x2 =  -3.7777777777777777\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  8 ,x2 =  -3.7777777777777777\n",
-            "group =  A\n",
-            "x1 =  7 ,x2Val =  -1 ,x2 =  -4.444444444444444\n",
-            "group =  A\n",
-            "x1 =  8 ,x2Val =  2 ,x2 =  -5.111111111111111\n",
-            "group =  A\n",
-            "x1 =  9 ,x2Val =  4 ,x2 =  -5.777777777777778\n",
-            "group =  A\n",
-            "x1 =  10 ,x2Val =  -5 ,x2 =  -6.444444444444444\n",
-            "group =  A\n",
-            "x1 =  12 ,x2Val =  1 ,x2 =  -7.777777777777778\n",
-            "group =  A\n",
-            "x1 =  13 ,x2Val =  3 ,x2 =  -8.444444444444445\n",
-            "group =  A\n",
-            "dVal =  -1\n",
-            "Weights >> Wa= -0.4 Wb= 1.0 Wc= 0.5\n",
-            "slope = -2.0 ,intercept =  0.8\n",
-            "x2 =  4.8\n",
-            "End.while: nErr 1\n",
-            "Now, Classifying...\n",
-            "x1 =  -8 ,x2Val =  1 ,x2 =  16.8\n",
-            "group =  B\n",
-            "x1 =  -6 ,x2Val =  -1 ,x2 =  12.8\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  -3 ,x2 =  10.8\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  3 ,x2 =  10.8\n",
-            "group =  B\n",
-            "x1 =  -3 ,x2Val =  -2 ,x2 =  6.8\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  -1 ,x2 =  4.8\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  2 ,x2 =  4.8\n",
-            "group =  B\n",
-            "x1 =  0 ,x2Val =  -3 ,x2 =  0.8\n",
-            "group =  B\n",
-            "x1 =  2 ,x2Val =  -2 ,x2 =  -3.2\n",
-            "group =  A\n",
-            "Current Data = [2, -2, 'B'] computed group =  A real group = B\n",
-            "x1 =  3 ,x2Val =  7 ,x2 =  -5.2\n",
-            "group =  A\n",
-            "x1 =  4 ,x2Val =  -4 ,x2 =  -7.2\n",
-            "group =  A\n",
-            "Current Data = [4, -4, 'B'] computed group =  A real group = B\n",
-            "x1 =  4 ,x2Val =  9 ,x2 =  -7.2\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  4 ,x2 =  -11.2\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  8 ,x2 =  -11.2\n",
-            "group =  A\n",
-            "x1 =  7 ,x2Val =  -1 ,x2 =  -13.2\n",
-            "group =  A\n",
-            "x1 =  8 ,x2Val =  2 ,x2 =  -15.2\n",
-            "group =  A\n",
-            "x1 =  9 ,x2Val =  4 ,x2 =  -17.2\n",
-            "group =  A\n",
-            "x1 =  10 ,x2Val =  -5 ,x2 =  -19.2\n",
-            "group =  A\n",
-            "x1 =  12 ,x2Val =  1 ,x2 =  -23.2\n",
-            "group =  A\n",
-            "x1 =  13 ,x2Val =  3 ,x2 =  -25.2\n",
-            "group =  A\n",
-            "dVal =  -1\n",
-            "Weights >> Wa= -0.6000000000000001 Wb= 0.6 Wc= 0.9\n",
-            "slope = -0.67 ,intercept =  0.67\n",
-            "x2 =  -0.67\n",
-            "End.while: nErr 2\n",
-            "Now, Classifying...\n",
-            "x1 =  -8 ,x2Val =  1 ,x2 =  6.0\n",
-            "group =  B\n",
-            "x1 =  -6 ,x2Val =  -1 ,x2 =  4.666666666666667\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  -3 ,x2 =  4.0\n",
-            "group =  B\n",
-            "x1 =  -5 ,x2Val =  3 ,x2 =  4.0\n",
-            "group =  B\n",
-            "x1 =  -3 ,x2Val =  -2 ,x2 =  2.666666666666667\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  -1 ,x2 =  2.0\n",
-            "group =  B\n",
-            "x1 =  -2 ,x2Val =  2 ,x2 =  2.0\n",
-            "group =  B\n",
-            "x1 =  0 ,x2Val =  -3 ,x2 =  0.6666666666666667\n",
-            "group =  B\n",
-            "x1 =  2 ,x2Val =  -2 ,x2 =  -0.6666666666666665\n",
-            "group =  B\n",
-            "x1 =  3 ,x2Val =  7 ,x2 =  -1.3333333333333333\n",
-            "group =  A\n",
-            "x1 =  4 ,x2Val =  -4 ,x2 =  -1.9999999999999998\n",
-            "group =  B\n",
-            "x1 =  4 ,x2Val =  9 ,x2 =  -1.9999999999999998\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  4 ,x2 =  -3.333333333333333\n",
-            "group =  A\n",
-            "x1 =  6 ,x2Val =  8 ,x2 =  -3.333333333333333\n",
-            "group =  A\n",
-            "x1 =  7 ,x2Val =  -1 ,x2 =  -3.999999999999999\n",
-            "group =  A\n",
-            "x1 =  8 ,x2Val =  2 ,x2 =  -4.666666666666666\n",
-            "group =  A\n",
-            "x1 =  9 ,x2Val =  4 ,x2 =  -5.333333333333333\n",
-            "group =  A\n",
-            "x1 =  10 ,x2Val =  -5 ,x2 =  -5.999999999999999\n",
-            "group =  A\n",
-            "x1 =  12 ,x2Val =  1 ,x2 =  -7.333333333333333\n",
-            "group =  A\n",
-            "x1 =  13 ,x2Val =  3 ,x2 =  -7.999999999999999\n",
-            "group =  A\n",
-            "dVal =  -1\n",
             "================== Result ===============\n",
-            "slope =  -0.67 intercept =  0.67\n",
+            "slope =  -0.93 intercept =  0.21\n",
+            "\n",
+            "==========  LINEAR CLASSIFIER  ==========\n",
+            "slope= -0.93  intercept= 0.21\n",
+            "\n",
+            "Input x and y  (e.g.) 7 7  >> \n",
+            "7 7\n",
+            "Your Input; x= 7  y= 7\n",
+            "\n",
+            "Classification Result= Group A\n",
+            "\n",
+            "Press 1 to Continue, 0 to Quit >> \n",
+            "0\n",
             "###########  END OF PROGRAM   ############\n"
           ]
         }
@@ -263,14 +90,14 @@
         "\n",
         "\n",
         "\n",
-        "#Wa,Wb,Wc = input((\"input weights(Wa,Wb,Wc)(e.g.,0, 1, 0.5) >>\"    )).split()\n",
-        "#Wa = float(Wa)\n",
-        "#Wb = float(Wb)\n",
-        "#Wc = float(Wc)\n",
+        "Wa,Wb,Wc = input((\"input weights(Wa,Wb,Wc)(e.g.,0, 1, 0.5) >>\"    )).split()\n",
+        "Wa = float(Wa)\n",
+        "Wb = float(Wb)\n",
+        "Wc = float(Wc)\n",
         "\n",
-        "Wa = 0\n",
-        "Wb = 1\n",
-        "Wc = 0.5\n",
+        "#Wa = 0\n",
+        "#Wb = 1\n",
+        "#Wc = 0.5\n",
         "\n",
         "\n",
         "print(\"Weights >>\",\"Wa=\",Wa,\"Wb=\",Wb,\"Wc=\",Wc)\n",
@@ -281,14 +108,14 @@
         "   #test; (-8,1)\n",
         "#x1 = -8\n",
         "#x2 = slope*x1 + intercept   # 16\n",
-        "print(\"slope =\",round(slope,1),\",intercept = \",intercept)\n",
+        "#print(\"slope =\",round(slope,1),\",intercept = \",intercept)\n",
         "input()\n",
         "\n",
         "L = 0.2      # Learning rate\n",
         "\n",
         "while(1):\n",
         "\n",
-        "  print(\"Now, Classifying...\")\n",
+        "  #print(\"Now, Classifying...\")\n",
         "  nErr = 0     # nbr of error\n",
         "  iter = 0     # iter count\n",
         "\n",
@@ -297,16 +124,16 @@
         "    x1 = D[0]   # = x1Val\n",
         "    x2Val = D[1]\n",
         "    x2 = slope*x1+intercept      #e.g..; x1 = -8, x2 = 16 (x2Val = 1)\n",
-        "    print(\"x1 = \",x1,\",x2Val = \",x2Val,\",x2 = \",x2)\n",
+        "    #print(\"x1 = \",x1,\",x2Val = \",x2Val,\",x2 = \",x2)\n",
         "    if (x2Val > x2):\n",
         "      group = 'A'\n",
         "    else :\n",
         "      group = 'B'\n",
         "  \n",
-        "    print(\"group = \",group)\n",
+        "    #print(\"group = \",group)\n",
         "\n",
         "    if (group != D[2]):      #error occurs\n",
-        "      print(\"Current Data =\",D,\"computed group = \",group,\"real group =\",D[2])\n",
+        "      #print(\"Current Data =\",D,\"computed group = \",group,\"real group =\",D[2])\n",
         "      nErr += 1\n",
         "      if (nErr == 1):  #first error\n",
         "        firstE = iter - 1\n",
@@ -318,7 +145,7 @@
         "    else:\n",
         "        dVal = 1\n",
         "\n",
-        "  print(\"dVal = \",dVal)\n",
+        "  #print(\"dVal = \",dVal)\n",
         "\n",
         "  if nErr == 0 :\n",
         "    break\n",
@@ -331,12 +158,12 @@
         "\n",
         "  slope = -(Wb/Wc)          \n",
         "  intercept = -(Wa/Wc)  \n",
-        "  print(\"Weights >>\",\"Wa=\",Wa,\"Wb=\",Wb,\"Wc=\",Wc)\n",
-        "  print(\"slope =\",round(slope,2),\",intercept = \",round(intercept,2))\n",
+        "  #print(\"Weights >>\",\"Wa=\",Wa,\"Wb=\",Wb,\"Wc=\",Wc)\n",
+        "  #print(\"slope =\",round(slope,2),\",intercept = \",round(intercept,2))\n",
         "\n",
         "  x2 = slope*x1Dat + intercept\n",
-        "  print(\"x2 = \",round(x2,2))\n",
-        "  print(\"End.while: nErr = \",nErr)\n",
+        "  #print(\"x2 = \",round(x2,2))\n",
+        "  #print(\"End.while: nErr = \",nErr)\n",
         "  \n",
         "print(\"================== Result ===============\")\n",
         "print(\"slope = \",round(slope,2),\"intercept = \",round(intercept,2))\n",
